Simple fix on IE

--- a/app/assets/stylesheets/section/contact.scss
+++ b/app/assets/stylesheets/section/contact.scss
@@ -151,3 +151,9 @@ body {
     }
   }
 }
+
+.ie {
+  body div#contact_content ul {
+    width: 350px;
+  }
+}
